# LearnOpenGL

./: CMakeLists.txt  main.cpp
include/: Camera.h  Shader.h
shaders/: frag.glsl  vert.glsl
shaders/base/: frag.glsl
shaders/light/: frag.glsl  lamp.frag.glsl  lamp.vert.glsl  vert.glsl
src/: Camera.cpp  Shader.cpp
